# proxy-insight

./: .gitignore  README.md  pyproject.toml  start.py
src/: config.json  config.toml  config_api.py  db.py  logging_config.py  main.py  proxy_mgr.py  utils.py
src/static/: index.html  style.css
src/static/js/: api.js  app.js  ui.js
src/static/js/views/: dashboard.js  request-list.js
tests/: reproduce_port_issue.py  test_mysql_conn.py  test_proxy.py
