[project]
name = "proxy-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "mitmproxy>=12.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "aiosqlite>=0.22.1",
    "jinja2>=3.1.6",
]
